salesforce-port/force-app/main/default/objects/Approval_Chain__c/Approval_Chain__c.object-meta.xml
<CustomObject>
    <label>Approval Chain</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Chain Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Chains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>