salesforce-port/force-app/main/default/objects/Approval_Chain__c/fields/Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approval_Limit__c</fullName>
    <label>Approval Limit</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>