salesforce-port/force-app/main/default/objects/Approval_Chain__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Chains</relationshipLabel>
    <relationshipName>Approval_Chains</relationshipName>
</CustomField>