salesforce-port/force-app/main/default/objects/Approval_Chain__c/fields/Submits_To_Override__c.field-meta.xml
<CustomField>
    <fullName>Submits_To_Override__c</fullName>
    <label>Submits To Override</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Chain Overrides</relationshipLabel>
    <relationshipName>Approval_Chain_Overrides</relationshipName>
</CustomField>